# esis

./: .gitignore  AGENT.md  PRD.md  README.md  SCHEDULE.md  TODO.md  esis.bat  main.py  pyproject.toml
esis/: __init__.py
esis/cli/: __init__.py  app.py
esis/datasets/: __init__.py  base.py  endovis15.py  endovis17.py  endovis18.py  endovis19.py  inspection.py  registry.py  schema.py
esis/evaluation/: __init__.py  benchmark.py
esis/gui/: __init__.py  dataset_preview.py
esis/segmentation/: __init__.py  adapter_vit_cnn.py  base.py  checkpoints.py  classical.py  factory.py  matis.py  model_wrapper.py  postprocessing.py  preprocessing.py  runner.py  sam2_zero_shot.py  surgsam2.py  torch_utils.py
esis/tracking/: __init__.py  temporal_filter.py  tip_detector.py  tracker.py
esis/utils/: __init__.py  config.py  geometry.py  io.py
esis/visualization/: __init__.py  overlay.py  video_writer.py
