[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esis"
version = "0.1.0"
description = "Segmentation-based surgical instrument tip tracking experiments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.11.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.13.0.92",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "timm>=1.0.26",
    "torch==2.11.0+cu126",
    "torchvision==0.26.0+cu126",
    "transformers>=5.6.2",
]

[project.scripts]
esis = "esis.cli.app:main"

[dependency-groups]
dev = []

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
