[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esis"
version = "0.1.0"
description = "Segmentation-based surgical instrument tip tracking experiments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=1.11.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.0.0",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "simplejson>=3.20.2",
    "timm>=1.0.26",
    "torch==2.11.0+cu126",
    "torchvision==0.26.0+cu126",
    "transformers>=5.6.2",
    "yacs>=0.1.8",
]

[project.scripts]
esis = "esis.cli.app:main"

[dependency-groups]
dev = []

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
